@@ -1,3 +1,10 @@
+icmake (7.21.00) ISN
+
+  * Repaired segfaults using icmake, icm-exec, and icmun, as found by
+    Alexandre Reber.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 30 Jul 2013 16:49:58 +0200
+    
 icmake (7.20.00)
 
   * added missing '\n' to the strtok call in icmbuild's 'dependenciesOf'
